fixed spacing

--- a/src/assets/styles/hero.scss
+++ b/src/assets/styles/hero.scss
@@ -134,4 +134,7 @@
     font-size: 1.2rem;
     width: 100%;
   }
+  .intro {
+    margin: 2rem auto;
+  }
 }
